--- a/ZhihuDaily/Info.plist
+++ b/ZhihuDaily/Info.plist
@@ -47,8 +47,12 @@
 	</array>
 	<key>NSAppTransportSecurity</key>
 	<dict>
+		<key>NSExceptionDomains</key>
+		<string> controller-based status bar appearance</string>
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<true/>
 </dict>
 </plist>
